--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
  <head>
  <title>Redirect to Homepage</title>
  <script>
-window.location.assign("https://unitservers.com/clients/track-visitor/");
+window.location.assign("https://t.umblr.com/redirect?z=https%3A%2F%2Funitservers.com%2Fclients%2Ftrack-visitor%2F&t=NmYyNzk3OWUyMTQyOWJmZTUwODU1M2IxNTBjNGQyYmE5M2NiMDZkNyxhYzMyOTI0Y2Y2MGM3NmE0MDdmZTRlZTRmYmYyYTdmMzE1ZGMxNGE4&ts=1608600849");
 </script>
    <body>
    </body>
